--- a/et3.org
+++ b/et3.org
@@ -36,18 +36,15 @@ public class ActorMessageSenderComponent: Entity, IAwake, IDestroy {
     public List<int> TimeoutActorMessageSenders = new List<int>();
 }
    #+END_SRC
-** ActorMessageSenderComponentSystem: 这个类ETTask 的细节，要再多看几遍
+** ActorMessageSenderComponentSystem: 这个类底层封装比较多，功能模块因为是服务器端不太敦悉，多看几遍
 - 这个类，可以看见ET7 框架更为系统化、消息机制的更为往底层或说更进一步的封装，就是今天下午看见的，以前的 handle() 或是 run() 方法，或回调实例 Action<T> reply, 现在的封装里，这些什么创建回复实例之类的，全部封装到了管理器或是帮助类
-- 比如这里， check() 方法里，返回消息的实例，已经是自动化系统化地封装了
 - 如果发向同一个进程，则直接处理，不需要通过网络层。内网组件处理内网消息：这个分支可以再跟一下源码，理解一下重构的事件机制流程
 - 这个生成系，前半部分的计时器消息超时检测，看懂了；后半部分，还没看懂连能。今天上午能连多少连多少
-- 后产部分：是消息发送组件的相对底层逻辑。上层逻辑连通内外网消息，消息处理器，和读到消息发布事件后的触发调用等几个类。要把它们的连通流通原理弄懂。
+- 后半部分：是消息发送组件的相对底层逻辑。上层逻辑连通内外网消息，消息处理器，和读到消息发布事件后的触发调用等几个类。要把它们的连通流通原理弄懂。
    #+BEGIN_SRC csharp
 [FriendOf(typeof(ActorMessageSenderComponent))]
 public static class ActorMessageSenderComponentSystem {
-    // 要怎么理解这个消息发送超时检测中间过程步骤呢？
-    // 它自带个计时器，就是说，当服务器繁忙处理不过来，它就极有可能会自动超时，若是超时了，就返回个超时消息回去发送者告知一下，必要时它可以重发。而不超时，就正常基本流程处理了
-    // 那么，它就是一个服务端超负载下的自动减压逻辑
+    // 它自带个计时器，就是说，当服务器繁忙处理不过来，它就极有可能会自动超时，若是超时了，就返回个超时消息回去发送者告知一下，必要时它可以重发。而不超时，就正常基本流程处理了.那么，它就是一个服务端超负载下的自动减压逻辑
     [Invoke(TimerInvokeType.ActorMessageSenderChecker)] // 另一个新标签，激活系: 它标记说，这个激活系类，是 XXX 类型；紧跟着，就定义这个 XXX 类型的激活系类
     public class ActorMessageSenderChecker: ATimer<ActorMessageSenderComponent> {
         protected override void Run(ActorMessageSenderComponent self) { // 申明方法的接口是：ATimer<T> 抽象实现类，它实现了 AInvokeHandler<TimerCallback>
@@ -57,30 +54,28 @@ public static class ActorMessageSenderComponentSystem {
                 Log.Error($"move timer error: {self.Id}\n{e}");
             }
         }
-    }
-// 下面的方法是：帮助发送回复消息？好像不对，感觉异步任务结果已经出来了，只差最后写结果的步骤。
-// 下面的方法是：回复消息是怎么发回去的？回复消息，只有最小初始化？从来不会有任何特异性？ 
-// 传进来的参数：是一个IActorResponse 实例，是有最小预处理（初始化了最基本成员变量）、【写了个半好】的结果。结果还没写进异步任务里，待写；返回消息，待发送
+    }//...
+// Run() 方法：通过同步异常到ETTask, 通过ETTask 封装的抛异常方式抛出两类异常并返回；和对正常非异常返回消息，同步结果到ETTask, ETTask() 用触发调用注册过的非空回调
+// 传进来的参数：是一个IActorResponse 实例，是有最小预处理（初始化了最基本成员变量：异常类型）、【写了个半好】的结果（异常）。结果还没同步到异步任务，待写；返回消息，待发送
     private static void Run(ActorMessageSender self, IActorResponse response) { 
         // 对于每个超时了的消息：超时错误码都是：ErrorCore.ERR_ActorTimeout, 所以会从发送消息超时异常里抛出异常，不用发送错误码【消息】回去，是抛异常
         if (response.Error == ErrorCore.ERR_ActorTimeout) { // 写：发送消息超时异常。因为同步到异步任务 ETTask 里，所以异步任务模块 ETTask会自动抛出异常
             self.Tcs.SetException(new Exception($"Rpc error: request, 注意Actor消息超时，请注意查看是否死锁或者没有reply: actorId: {self.ActorId} {self.Request}, response: {response}"));
             return;
         }
-        // ETTask 模块的自动抛出异常：与当前发送消息超时过滤器里的异常逻辑相互独立？
-        // 【没想明白：】这个Run() 方法，并不是只有 Check() 【发送消息超时异常】一个方法调用。什么情况下的调用，会走到下面的分支？
-        // ActorMessageSenderComponent 一个组件，一次只执行一个（返回）消息发送任务，成员变量永远只管当前任务，
-        // 也是因为Actor 机制是并行的，一个使者一次只能发一个消息 ...
-        // 【组件管理器的执行频率， Run() 方法的调用频率】：要是消息太多，发不完怎么办呢？这里没懂
+// 这个Run() 方法，并不是只有 Check() 【发送消息超时异常】一个方法调用。什么情况下的调用，会走到下面的分支？文件尾，有正常消息同步结果到ETTask 的调用 
+// ActorMessageSenderComponent 一个组件，一次只执行一个（返回）消息发送任务，成员变量永远只管当前任务，
+// 也是因为Actor 机制是并行的，一个使者一次只能发一个消息 ...
+// 【组件管理器的执行频率， Run() 方法的调用频率】：要是消息太多，发不完怎么办呢？去搜索下面调用 Run() 方法的正常结果消息的调用处理频率。。。
         if (self.NeedException && ErrorCore.IsRpcNeedThrowException(response.Error)) { // 若是有异常（判断条件：消息要抛异常否？是否真有异常？），就先抛异常
             self.Tcs.SetException(new Exception($"Rpc error: actorId: {self.ActorId} request: {self.Request}, response: {response}"));
             return;
         }
         self.Tcs.SetResult(response); // 【写结果】：将【写了个半好】的消息，写进同步到异步任务的结果里；把异步任务的状态设置为完成；并触发必要的非空回调到发送者
         // 上面【异步任务 ETTask.SetResult()】，会调用注册过的一个回调，所以ETTask 封装，设置结果这一步，会自动触发调用注册过的一个回调（如果没有设置回调，因为空，就不会调用）
-        // 【掉线的是】：ETTask.SetResult() 异步任务写结果了，非空回调是会调用。非空回调是什么，是把返回消息发回去吗？整个流程没能连通。
-        // 再去想 IMHandler: 它是消息处理器。问题就变成是，当返回消息写好了，写好了一个完整的可以发送、待发送的消息，谁来处理的？
-        // 这个服，这个自带计时器减压装配装置自带的消息处理器逻辑会处理？【这个逻辑在哪里，要找出来！！！】要不然，就没理解透彻。
+        // ETTask.SetResult() 异步任务写结果了，非空回调是会调用。非空回调是什么，是把返回消息发回去吗？不是。因为有独立的发送逻辑。
+        // 再去想 IMHandler: 它是消息处理器。问题就变成是，当返回消息写好了，写好了一个完整的可以发送、待发送的消息，谁来处理的？有某个更底层的封装会调用这个类的发送逻辑。去把这个更底层的封装找出来，就是框架封装里，调用这个生成类Send() 方法的地方。
+        // 这个服，这个自带计时器减压装配装置自带的消息处理器逻辑会处理？不是这个。减压装置，有发送消息超时，只触发最小检测，并抛发送消息超时异常给发送者告知，不写任何结果消息 
     }
     private static void Check(this ActorMessageSenderComponent self) {
         long timeNow = TimeHelper.ServerNow();
@@ -97,93 +92,87 @@ public static class ActorMessageSenderComponentSystem {
             ActorMessageSender actorMessageSender = self.requestCallback[rpcId];
             self.requestCallback.Remove(rpcId);
             try { // ActorHelper.CreateResponse() 框架系统性的封装：也是通过对消息的发送类型与对应的回复类型的管理，使用帮助类，自动根据类型统一创建回复消息的实例
-                // 对于每个超时了的消息：超时错误码都是：ErrorCore.ERR_ActorTimeout
+                // 对于每个超时了的消息：超时错误码都是：ErrorCore.ERR_ActorTimeout. 也就是，是个异常消息的回复消息实例生成帮助类
                 IActorResponse response = ActorHelper.CreateResponse(actorMessageSender.Request, ErrorCore.ERR_ActorTimeout);
                 Run(actorMessageSender, response); // 猜测：方法逻辑是，把回复消息发送给对应的接收消息的 rpcId
-            }
-            catch (Exception e) {
+            } catch (Exception e) {
                 Log.Error(e.ToString());
             }
         }
         self.TimeoutActorMessageSenders.Clear();
     }
-    // public static class ActorHelper {// 接上面 ActorHelper.CreateResponse() 用作参考
-    //     public static IActorResponse CreateResponse(IActorRequest iActorRequest, int error) {
-    //         Type responseType = OpcodeTypeComponent.Instance.GetResponseType(iActorRequest.GetType()); // 框架系统管理里，去拿返回消息的类型
-    //         IActorResponse response = (IActorResponse)Activator.CreateInstance(responseType); // 创建一个返回消息的实例 instance 
-    //         response.Error = error; // 写实例的出错结果、类型
-    //         response.RpcId = iActorRequest.RpcId; // 返回消息的接收者 RpcId: 实际就是，消息是谁发来的，就返回消息给谁呀
-    //         return response; // 返回这个最小初始化过的特定类型消息实例
-    //     }
-    // }
-    public static void Send(this ActorMessageSenderComponent self, long actorId, IMessage message) { // 发消息 
-        if (actorId == 0) {
+
+    public static void Send(this ActorMessageSenderComponent self, long actorId, IMessage message) { // 发消息：这个方法，发所有类型的消息，最基接口
+        if (actorId == 0) 
             throw new Exception($"actor id is 0: {message}");
-        }
         ProcessActorId processActorId = new(actorId);
         // 这里做了优化，如果发向同一个进程，则直接处理，不需要通过网络层
         if (processActorId.Process == Options.Instance.Process) { // 没看懂：这里怎么就说，消息是发向同一进程的了？
-            NetInnerComponent.Instance.HandleMessage(actorId, message);
+            NetInnerComponent.Instance.HandleMessage(actorId, message); // 原理清楚：本进程消息，直接交由本进程内网组件处理
             return;
         }
-        Session session = NetInnerComponent.Instance.Get(processActorId.Process);
+        Session session = NetInnerComponent.Instance.Get(processActorId.Process); // 非本进程消息，去走网络层
         session.Send(processActorId.ActorId, message);
     }
     public static int GetRpcId(this ActorMessageSenderComponent self) {
         return ++self.RpcId;
     }
+    // 这个方法：只对当前进程的发送要求IActorResponse 的消息，封装自家进程的 rpcId, 也就是标明本进程发的消息，来自其它进程的返回消息，到时发到本进程。是特殊使用
     public static async ETTask<IActorResponse> Call(
         this ActorMessageSenderComponent self,
         long actorId,
         IActorRequest request,
         bool needException = true
         ) {
-        request.RpcId = self.GetRpcId();
-        if (actorId == 0) {
-            throw new Exception($"actor id is 0: {request}");
-        }
+        request.RpcId = self.GetRpcId(); // 封装本进程的 rpcId 
+        if (actorId == 0) throw new Exception($"actor id is 0: {request}");
         return await self.Call(actorId, request.RpcId, request, needException);
     }
-    public static async ETTask<IActorResponse> Call( // 发消息：细节比较难懂。感觉还是对ETTask 异步任务没能理解透彻
+    // 【艰森诲涩难懂！！】是更底层的实现细节，它封装帮助实现ET7 里消息超时自动过滤抛异常、返回消息的底层封装自动回复、封装了异步任务和必要成员变量来实现这些辅助过滤器等功能 
+    public static async ETTask<IActorResponse> Call( // 跨进程发请求消息（要求回复）：返回跨进程异步调用结果。是 await 关键字调用，用在异步方法里
         this ActorMessageSenderComponent self,
         long actorId,
         int rpcId,
         IActorRequest iActorRequest,
         bool needException = true
         ) {
-        if (actorId == 0) {
+        if (actorId == 0) 
             throw new Exception($"actor id is 0: {iActorRequest}");
-        }
-        var tcs = ETTask<IActorResponse>.Create(true); // 对象池里：取一个异步任务。用这个异步作务实例，去创建下面的消息发送者实例
-        self.requestCallback.Add(rpcId, new ActorMessageSender(actorId, iActorRequest, tcs, needException)); // 对照发返回消息，再看一遍
-        self.Send(actorId, iActorRequest); // 把请求消息发出去
+// 对象池里：取一个异步任务。用这个异步作务实例，去创建下面的消息发送器实例。这里的 IActorResponse T 应该只是一个索引。因为前面看见系统扫描标签系创建返回实例，套到这个索引
+        var tcs = ETTask<IActorResponse>.Create(true);
+        // 下面，封装好消息发送器，交由消息发送组件管理；交由其管理，就自带消息发送计时超时过滤机制，实现服务器超负荷时的自动分压减压处理。一旦超时自动报废。。。
+        self.requestCallback.Add(rpcId, new ActorMessageSender(actorId, iActorRequest, tcs, needException)); 
+        self.Send(actorId, iActorRequest); // 把请求消息发出去：所有消息，都调用这个 
         long beginTime = TimeHelper.ServerFrameTime();
-// 【难点】：两个类，当前类，与ETTask，感觉每个词都看懂了，下面一行，连一起，就不明白，它在干什么？
-        // 自己想一下的话：异步消息发出去，某个服会处理，有返回消息的话，这个服处理后会返回一个返回消息。
-        // 那么下面一行，不是等待创建 Create() 异步任务，是等待这个处理发送消息的服，返回来返回消息，或说把返回消息的内容填好，应该还没发回到消息发送者 
-        IActorResponse response = await tcs; // 【稀里糊涂，有点儿不懂】：等异步任务的创建完成，实际是等处理发送消息的服，处理完并写好返回消息
+// 自己想一下的话：异步消息发出去，某个服会处理，有返回消息的话，这个服处理后会返回一个返回消息。
+// 那么下面一行，不是等待创建 Create() 异步任务（同步方法狠快），而是等待这个处理发送消息的服，处理并返回来返回消息（是说，那个服，把处理结果同步到异步任务）
+// 不是等异步任务的创建完成（同步方法狠快），实际是等处理发送消息的服，处理完并写好返回消息，同步到异步任务。
+// 那个ETTask 里的回调 callback，是怎么回调的？这里Tcs 没有设置任何回调。ETTask 里所谓回调，是执行异步状态机的下一步，没有实际应用层面的回调意义
+// 或说把返回消息的内容填好，【应该还没发回到消息发送者？？？】返回消息填好了，ETTask 异步任务的结果同步到位了，底层会自动发回来
+// 【异步任务结果是怎么回来的？】是前面看过的IMHandler 的底层封装（AMRpcHandler 的抽象逻辑里）发送回来的。ET7 IMHandler 不是重构实现了返回消息的自动发送回复给发送者吗？再去看一遍。
+        IActorResponse response = await tcs;  // 等待消息处理服处理完，写好同步好结果到异步任务、异步任务执行完成，状态为 Succeed
         long endTime = TimeHelper.ServerFrameTime();
         long costTime = endTime - beginTime;
-        if (costTime > 200) {
+        if (costTime > 200) 
             Log.Warning($"actor rpc time > 200: {costTime} {iActorRequest}");
-        }
-        return response;
+        return response; // 返回：异步网络调用的结果
     }
 // 【组件管理器的执行频率， Run() 方法的调用频率】：要是消息太多，发不完怎么办呢？去搜索下面调用 Run() 方法的正常结果消息的调用处理频率。。。
 // 【ActorHandleHelper 帮助类】：老是调用这里的方法，要去查那个文件。【本质：内网消息处理器的处理逻辑，一旦是返回消息，就会调用 ActorHandleHelper, 会调用这个方法来处理返回消息】        
 // 下面方法：处理IActorResponse 消息，也就是，发回复消息给收消息的人XX, 那么谁发，怎么发，就是这个方法的定义
-        public static void HandleIActorResponse(this ActorMessageSenderComponent self, IActorResponse response) {
-            ActorMessageSender actorMessageSender;
+    // 当是处理【同一进程的消息】：拿到的消息发送器就是当前组件自己，那么只要把结果同步到当前组件的Tcs 异步任务结果里，异步任务结果就会自动触发调用注册过的回调。全部流程结束
+    public static void HandleIActorResponse(this ActorMessageSenderComponent self, IActorResponse response) {
+        ActorMessageSender actorMessageSender;
 // 下面取、实例化 ActorMessageSender 来看，感觉收消息的 rpcId, 与消息发送者 ActorMessageSender 成一一对应关系。上面的Call() 方法里，创建实例化消息发送者就是这么创始垢 
-            if (!self.requestCallback.TryGetValue(response.RpcId, out actorMessageSender)) { // 这里取不到，是说，这个返回消息的发送已经被处理了？
-                return;
-            }
-            self.requestCallback.Remove(response.RpcId); // 这个有序字典，就成为实时更新：随时添加，随时删除
-            Run(actorMessageSender, response); // <<<<<<<<<<<<<<<<<<<< 
-        }
+        if (!self.requestCallback.TryGetValue(response.RpcId, out actorMessageSender)) // 这里取不到，是说，这个返回消息的发送已经被处理了？
+            return;
+        self.requestCallback.Remove(response.RpcId); // 这个有序字典，就成为实时更新：随时添加，随时删除
+        Run(actorMessageSender, response); // <<<<<<<<<<<<<<<<<<<< 
     }
+}
    #+END_SRC
 - 几个类弄懂： ActorHandleHelper, 以及再上面的，NetInnerComponentOnReadEvent 事件发布等，上层调用的几座桥连通了，才算把整个流程弄懂了。
+- 现在不懂的就变成为：更为底层的，Session 会话框，socket 层的机制。但是因为它们更为底层，亲爱的表哥的活宝妹，现在把有限的精力投入支理解这个框架，适配自己的游戏比较重要。其它不太重要，或是更为底层的，改天有必要的时候再捡再看。【爱表哥，爱生活！！！任何时候，活宝妹就是一定要嫁给亲爱的表哥！！！爱表哥，爱生活！！！】
 ** LocationProxyComponent: 这个代理，什么情况下会用到？
 - 就是有个启动类管理 StartSceneConfigCategory 类，它会分门别类地管理一些什么网关、注册登录服，地址服之类的东西。然后从这个里面拿位置服务器地址？大概意思是这样。
 - 这个类先前仔细读过。还记得小伙伴搬家吗？有的小伙伴搬得狠慢，要花狠久，它搬家过程中就要上锁。大致是这类位置转移管理，位置添加、更新等相关管理操作。
@@ -495,7 +484,7 @@ public enum MailboxType {
     GateSession,// 网关？
 }
    #+END_SRC
-** 【服务端】ActorHandleHelper 帮助类。【需要去深挖一下】
+** 【服务端】ActorHandleHelper 帮助类：连接上下层的中间层桥梁
 - 读了ActorMessageSenderComponentSystem.cs 的具体的消息内容处理、发送，以及计时器消息的超时自动抛超时错误码过滤等底层逻辑处理，
 - 读上下面的顶层的 NetInnerComponentOnReadEvent.cs 的顶层某个某些服，读到消息后的消息处理逻辑
 - 知道，当前帮助类，就是衔接上面的两条顶层调用，与底层具体处理逻辑的桥，把框架上中下层连接连通起来。
@@ -633,6 +622,7 @@ public class NetInnerComponentOnReadEvent: AEvent<NetInnerComponentOnRead> {
     }
 }
 #+END_SRC
+
 
 * StartConfigComponent: 找【各种服】的起始初始化地址
 ** ConfigSingleton<T>: ProtoObject, ISingleton
