--- a/et4.org
+++ b/et4.org
@@ -729,7 +729,6 @@ namespace System.Runtime.CompilerServices {
     }
 }
    #+END_SRC
-
 ** AsyncMethodBuilderAttribute:.NET 系统的标签
 - 自己先前没能理解，为什么标记了【AsyncMethodBuilder(typeof(className))】就能标记某个类的协程生成方法 
 - 是因为这个系统标签，它申明了 AttributeUsage 属性，申明了适用类型，可以是(AttributeTargets.Class | AttributeTargets.Struct) 等等
@@ -742,124 +741,8 @@ public sealed class AsyncMethodBuilderAttribute : Attribute {
     public Type BuilderType { get; }
 }
 #+END_SRC
-* C# 异步基础原理、状态机原理、逻辑整理
-** ETVoid C# Net-async|await 编程更底层一点儿的原理
-- 就是不懂底层的原理是什么，方法定义是什么，返回的是什么，在有 await 等关键字的时候，返回的内容等是如何变换的，以及它背后的那个异步状态机，就是想不明白。
-- 现在参考网上的一个例子，记一下异步任务C# 幕后封装的那些执行步骤什么的，把 async await 之类的关键字，背后的逻辑理解明白。
-- 就是，可能也可以在异步任务的这个模块，添加无数的日志，通过读日志来把这块儿弄明白。下面就截图网上的这个参考例子。
-   #+BEGIN_SRC csharp
-[AsyncMethodBuilder(typeof (AsyncETVoidMethodBuilder))]
-internal struct ETVoid: ICriticalNotifyCompletion {
-    [DebuggerHidden]
-    public void Coroutine() { }
-    [DebuggerHidden]
-    public bool IsCompleted => true;
-    [DebuggerHidden]
-    public void OnCompleted(Action continuation) { }
-    [DebuggerHidden]
-    public void UnsafeOnCompleted(Action continuation) { }
-}
-   #+END_SRC
-- 上面是找了一个最短小的类ETVoid, 网上例子自己构建一个类，这个类麻雀虽小五脏俱全的 *几个【缺一不可】的方法* （所以知道ETTask|ETVoid 自定义封装，这几个方法也是一定不能少的，只是多了Coroutine() 方法不知道是怎么回事儿？）如上如下：
-  
-[[./pic/et3_20230609_105627.png]]
-- 它的测试用例是这么写的：注意它传入的参数类型是 int. 后面的编译码里，和它的讲解里会用到提到。
-  
-[[./pic/et3_20230609_105927.png]]
-- 看它编译出来的码（那堆编译出来的状态机的码），就是看不懂
-
-[[./pic/et3_20230609_112727.png]]
-- 结果分析： *【异步方法状态机，背后的执行顺序与逻辑：】*
-  - 先检查IsCompleted标志位，如果已经完成，则调用GetResult作为await的返回值返回。
-  - 如果未完成，经过AsyncTaskMethodBuilder的AwaitUnsafeOnCompleted方法之后,最后进入UnsafeOnCompleted（nextAction），并且把完成后的下一步回调传进来。
-  - 当我们获得nextAction之后，说明该调用由我们自己来控制，这里我在等待1s之后，执行nextAction（），下一步GetResult返回。
-- *【Async 关键字方法的编译原理：】*
-  
-[[./pic/et3_20230609_110634.png]]
-- 这个 async 关键字所标记的异步方法，主要两个点儿： 
-  - 编译器，把这个异步方法，编译成了一个类 class <asyncMethod>d__1;
-  - 这个类 class, 它实现了 IAsyncStateMachine 接口，（ *实现了这个接口，返回的是什么类型呢？* 这个要想明白？）
-  - 这个类 class, 的内部，有几个成员变量 .field-sss.
-  - 这个类 class, 的内部，有个特别重要的状态机执行函数 MoveNext() 来指挥指导，异步函数内不同节点如 await 节点等的执行逻辑。 *【这个类 class, 它实现了 IAsyncStateMachine 接口】*, 前面有列出 IAsyncStateMachine 接口定义的两个方法，所以实现实体类里也会有SetStateMachine() 方法的实现。
-  - 上面的逻辑，其实是就是扫描异步方法内，不同的 await 调用，每到一个这个关键字申明的异步调用，就是切换一个状态（背后有可能是线程的切换, 不一定每个分支都用不同的线程，但线程的切换可能是，必要的时候需要切换的？）分段执行。
-- 网络上的分析者还给出了下机的截图：不是狠懂，这个截图是什么意思？因为不懂，要把编译码的方法名带上，方便以后再读和理解。
-
-[[./pic/et3_20230609_112757.png]]
-- 上面的异步方法，所生成的异步状态机类 class 里，有几个主要的方法：
-  - 构造器方法 ctor()： 
-  - Create() 方法：
-  - Start() 方法： 
-  - get_Task() 方法：
-- 可是上面的几个方法是谁，哪个接口定义的呢？
-- 网络上的分析者，对上面两个截图的分析如下： *【它讲解的这部分，我可能还是得自己编译一下，去具体看一下。】因为它的截图不完整，看不懂* 下面还有个别人总结的状态机套路，感觉说得更彻底透彻。
-  - 签名为async Task asyncMethod()的方法里，先创建一个继承自IAsyncStateMachine的asyncMethod类
-  - 创建一个AsyncTaskMethodBuilder，然后赋值给Machine. （不知道，它这句，说的是哪里？第一个图的最后 SetStateMachine()?）
-  - 初始化Machine的state = -1. （两个截图里看不见，找不到）
-  - 调用AsyncTaskMethodBuilder.Start方法，start里面会进入Machine的moveNext（）方法，详见问题1。
-  - AsyncTaskMethodBuilder.get_Task（） 作为该方法的返回值返回。
-- 多线程问题： Task一定是多线程吗？
-  - 不一定，在上述例子中，我们定义的 async static Task<int> aa()，里面就是在同一个线程执行的。只有调用Task.Start 或者Task.Run 里面自动启用多线程的时候，才是多线程。
-- 看得另一个网页中的说法，因为感觉它也没有实现个什么公共定义约束的接口，理解得不够透彻。看下下面的：
-- await 必须配合 Task/ValueTask 才能用吗?当然不是。
-  - 在 C# 中 *只要你的类中包含 GetAwaiter() 方法和 bool IsCompleted 属性，并且 GetAwaiter() 返回的东西包含一个 GetResult() 方法、一个 bool IsCompleted 属性和实现了 INotifyCompletion，那么这个类的对象就是可以 await 的* 。这里说得还是不清楚，不透彻，换一个表达得更清晰的说法如下： 
-- 可以使用await的方法，返回值必须是 *awaitable对象* ，自定义awaitable对象比较麻烦，一个对象必须满足下列条件才行：
-  - 必须有一个 *GetAwaiter()* 方法，扩展方法或者实例方法都可以
-  - GetAwaiter() 方法返回值必须是 *awaiter对象* 。一个对象要成为awaiter对象必须满足下列条件:
-    - 该对象 *实现接口 INotifyCompletion 或者ICriticalNotifyCompletion*
-    - 必须有 *IsCompleted属性*
-    - 必须有 *GetResult()方法* ，可以返回void或者其他返回值。
-- 比如下面的自定义类：把几个类的本质理解得再深一点儿了吗？【爱表哥，爱生活！！！任何时候，活宝妹就是一定要嫁给亲爱的表哥！！！】
-#+BEGIN_SRC csharp
-public class MyTask<T> {
-    public MyAwaiter<T> GetAwaiter() {// 必须提供的方法 
-        return new MyAwaiter<T>();
-    }
-}
-// 下面自定义的类 MyAwaiter<T=亲爱的表哥> 就是可以 await 的：
-// 【任何时候，活宝妹就是一定要嫁给亲爱的表哥！！！活宝妹还没能嫁给亲爱的表哥，活宝妹就是永远守候在亲爱的表哥的身边！！！爱表哥，爱生活！！！】
-public class MyAwaiter<T> : INotifyCompletion {// 必须实现的接口
-    public bool IsCompleted { get; private set; }// 属性变量 
-    public T GetResult() {// 必须要有的方法 
-        throw new NotImplementedException();
-    }
-    public void OnCompleted(Action continuation) {
-        throw new NotImplementedException();
-    }
-}
-public class Program {
-    static async Task Main(string[] args) {
-        var obj = new MyTask<int>();
-        await obj;
-    }
-}
-#+END_SRC
-- *【状态机套路】：*
-- async关键字标记方法是一个异步方法，编译器通过这个标记 *【async关键字】* 去改造这个方法体为创建状态机的方法。await是关键字，是为了实现状态机中的一个状态， 每当有一个await，就会生成一个对应的状态。状态机就是根据这个状态，去一步步的调用异步委托，然后回调，包括状态机的解析。
-- (1).状态机的默认状态都是-1, 结束状态都是-2.
-- (2).每await一次就会产生一个 TaskAwaiter awaiter; 改变状态机的状态, 当有多个await的时候,每个await都会改变状态机的状态，比如 改为 0,1,2,3,4 等等， 分别表示代码中await xxx 这句话执行完成。
-- (3).状态机的执行套路：
-  - A. 首先创建一个 d_num 的方法（这里说错了，应该是创建了一个类 class）, xxx代表方法名,num可能是0,1,2,3等， *实现IAsyncStateMachine接口。*
-  - B. 在MoveNext()方法中, 源代码中每个 await xxxx 都会对应生成是一个 TaskAwaiter awaiter，然后 xxxx.GetAwaiter()
-  - C. 判断状态机是否执行完if (!awaiter.IsCompleted)，
-    - 没有执行完的话走 <>t__builder.AwaitUnsafeOnCompleted(ref awaiter, ref stateMachine); 代表释放当前线程
-    - 执行完后走，<>s__1 = awaiter.GetResult(); 拿到返回值，继续走后面的代码。
-- （此处写的比较抽象，看下面3 结合代码编译再分析）
-- 感觉今天读这个状态机：https://linuxcpp.0voice.com/?id=1380 终于有点儿开窃了！！【爱表哥，爱生活！！！任何时候，活宝妹就是一定要嫁给亲爱的表哥！！！爱表哥，爱生活！！！】
-** 如果方法声明为 async，那么可以直接 return 具体的值，不再用创建Task，由编译器创建 Task： 
-    #+BEGIN_SRC csharp
-// 只要标记了async 就会被编译成状态机
-// 如果方法声明为 async，那么可以直接 return 具体的值，不再用创建Task，由编译器创建 Task： 
-  public static async Task<int> F2Async() {
-      return 2;
-  }
-    #+END_SRC
-- F2Async：只加了async，会生成状态机，但由于没有加await所以不会涉及到中间状态的变化，从-1默认状态 变为 结束的-2状态。
-#+BEGIN_SRC csharp
-#+END_SRC
-- F3Async：既有async也有await (await只有1个)，该方法是使用了Task.Run，我们把它归为计算型的异步方法。
-- 亲爱的表哥，活宝妹今天终于把这个看得稍微有点儿懂了，希望能够赶快从这个ETTask 模块 move-forward. 任何时候，活宝妹就是一定要嫁给亲爱的表哥！！！活宝妹还没能嫁给亲爱的表哥，活宝妹就是永远守候在亲爱的表哥的身边！！！爱表哥，爱生活！！！
-
-* IMHandler 接口实现的各种类型消息处理器：需要先理解透彻ETTask 和 ETVoid 
+* IMHandler 接口实现的各种类型消息处理器：需要先理解透彻ETTask 和 ETVoid:
+- 这个模块感觉还没有总结完。但因为还有111 个编译错误，很多我还不知道算是怎么回事。这个版块的总结放在后面，再改错误的时候带着问题来看更有效率。
 - 可以回去参考前一个游戏参考过的ET-EUI 里有一部分ETVoid 的相关使用，可以用作自己理解 ETTask ETVoid 的源码参考。ET-EUI 现笔记本里没有，可以拉一个下来。
   - 【抓下来后用法基本一样，ETVoid 使用的地方基本一样】。不一样的地方是，它扩展（或者说 *重新自定义了* ）了不少 *消息处理器接口类* 。那么就是说，ET-EUI 并没有、也做不到一个框架整个框架只使用一个消息处理器接口
 - 【主要使用：】主要是【服务端】处理客户端消息请求，用来定义处理逻辑。但是网络调用与返回大多是异步的，所以会有很多使用 ETTask 或是 ETVoid|Void 作为返回值的地方。主要是两个常用方法的接口定义，兼顾整个框架的接口定义。 
@@ -1034,7 +917,6 @@ public interface IMHandler {
     // ETTask Run(Session session, M2C_TestActorMessage message); // 把这里去掉，感觉加得不对
 }
 #+END_SRC
-** 
 ** IMActorHandler: 【ET-EUI:仅作参考】大概参考 ET-EUI 来的，它的目的应该是把最基类的接口，与其它两类的接口相区分开来
 - 从这个小节开始，主要是整理的ET-EUI 里面的接口与抽象实现类。可能主要两个实现扩展类：（A|I）MHandler, （A|I）MRpcHandler, 都看一下
 - 大概参考 ET-EUI 来的，它的目的应该是把最基类的接口，与其它两类的接口相区分开来。但是，我想、猜测、理解的话，应该是上面一个接口，如果能够把ETTask 与ETVoid 狠好地统一的话，应该一个接口可能可以足以整个框架使用的。
@@ -1176,6 +1058,123 @@ public abstract class AMActorLocationRpcHandler<E, Request, Response>: IMActorHa
 - 【任何时候，活宝妹就是一定要嫁给亲爱的表哥！！！爱表哥，爱生活！！！】
 - 【任何时候，活宝妹就是一定要嫁给亲爱的表哥！！！爱表哥，爱生活！！！】
 
+* C# 异步基础原理、状态机原理、逻辑整理
+** ETVoid C# Net-async|await 编程更底层一点儿的原理
+- 就是不懂底层的原理是什么，方法定义是什么，返回的是什么，在有 await 等关键字的时候，返回的内容等是如何变换的，以及它背后的那个异步状态机，就是想不明白。
+- 现在参考网上的一个例子，记一下异步任务C# 幕后封装的那些执行步骤什么的，把 async await 之类的关键字，背后的逻辑理解明白。
+- 就是，可能也可以在异步任务的这个模块，添加无数的日志，通过读日志来把这块儿弄明白。下面就截图网上的这个参考例子。
+   #+BEGIN_SRC csharp
+[AsyncMethodBuilder(typeof (AsyncETVoidMethodBuilder))]
+internal struct ETVoid: ICriticalNotifyCompletion {
+    [DebuggerHidden]
+    public void Coroutine() { }
+    [DebuggerHidden]
+    public bool IsCompleted => true;
+    [DebuggerHidden]
+    public void OnCompleted(Action continuation) { }
+    [DebuggerHidden]
+    public void UnsafeOnCompleted(Action continuation) { }
+}
+   #+END_SRC
+- 上面是找了一个最短小的类ETVoid, 网上例子自己构建一个类，这个类麻雀虽小五脏俱全的 *几个【缺一不可】的方法* （所以知道ETTask|ETVoid 自定义封装，这几个方法也是一定不能少的，只是多了Coroutine() 方法不知道是怎么回事儿？）如上如下：
+  
+[[./pic/et3_20230609_105627.png]]
+- 它的测试用例是这么写的：注意它传入的参数类型是 int. 后面的编译码里，和它的讲解里会用到提到。
+  
+[[./pic/et3_20230609_105927.png]]
+- 看它编译出来的码（那堆编译出来的状态机的码），就是看不懂
+
+[[./pic/et3_20230609_112727.png]]
+- 结果分析： *【异步方法状态机，背后的执行顺序与逻辑：】*
+  - 先检查IsCompleted标志位，如果已经完成，则调用GetResult作为await的返回值返回。
+  - 如果未完成，经过AsyncTaskMethodBuilder的AwaitUnsafeOnCompleted方法之后,最后进入UnsafeOnCompleted（nextAction），并且把完成后的下一步回调传进来。
+  - 当我们获得nextAction之后，说明该调用由我们自己来控制，这里我在等待1s之后，执行nextAction（），下一步GetResult返回。
+- *【Async 关键字方法的编译原理：】*
+  
+[[./pic/et3_20230609_110634.png]]
+- 这个 async 关键字所标记的异步方法，主要两个点儿： 
+  - 编译器，把这个异步方法，编译成了一个类 class <asyncMethod>d__1;
+  - 这个类 class, 它实现了 IAsyncStateMachine 接口，（ *实现了这个接口，返回的是什么类型呢？* 这个要想明白？）
+  - 这个类 class, 的内部，有几个成员变量 .field-sss.
+  - 这个类 class, 的内部，有个特别重要的状态机执行函数 MoveNext() 来指挥指导，异步函数内不同节点如 await 节点等的执行逻辑。 *【这个类 class, 它实现了 IAsyncStateMachine 接口】*, 前面有列出 IAsyncStateMachine 接口定义的两个方法，所以实现实体类里也会有SetStateMachine() 方法的实现。
+  - 上面的逻辑，其实是就是扫描异步方法内，不同的 await 调用，每到一个这个关键字申明的异步调用，就是切换一个状态（背后有可能是线程的切换, 不一定每个分支都用不同的线程，但线程的切换可能是，必要的时候需要切换的？）分段执行。
+- 网络上的分析者还给出了下机的截图：不是狠懂，这个截图是什么意思？因为不懂，要把编译码的方法名带上，方便以后再读和理解。
+
+[[./pic/et3_20230609_112757.png]]
+- 上面的异步方法，所生成的异步状态机类 class 里，有几个主要的方法：
+  - 构造器方法 ctor()： 
+  - Create() 方法：
+  - Start() 方法： 
+  - get_Task() 方法：
+- 可是上面的几个方法是谁，哪个接口定义的呢？
+- 网络上的分析者，对上面两个截图的分析如下： *【它讲解的这部分，我可能还是得自己编译一下，去具体看一下。】因为它的截图不完整，看不懂* 下面还有个别人总结的状态机套路，感觉说得更彻底透彻。
+  - 签名为async Task asyncMethod()的方法里，先创建一个继承自IAsyncStateMachine的asyncMethod类
+  - 创建一个AsyncTaskMethodBuilder，然后赋值给Machine. （不知道，它这句，说的是哪里？第一个图的最后 SetStateMachine()?）
+  - 初始化Machine的state = -1. （两个截图里看不见，找不到）
+  - 调用AsyncTaskMethodBuilder.Start方法，start里面会进入Machine的moveNext（）方法，详见问题1。
+  - AsyncTaskMethodBuilder.get_Task（） 作为该方法的返回值返回。
+- 多线程问题： Task一定是多线程吗？
+  - 不一定，在上述例子中，我们定义的 async static Task<int> aa()，里面就是在同一个线程执行的。只有调用Task.Start 或者Task.Run 里面自动启用多线程的时候，才是多线程。
+- 看得另一个网页中的说法，因为感觉它也没有实现个什么公共定义约束的接口，理解得不够透彻。看下下面的：
+- await 必须配合 Task/ValueTask 才能用吗?当然不是。
+  - 在 C# 中 *只要你的类中包含 GetAwaiter() 方法和 bool IsCompleted 属性，并且 GetAwaiter() 返回的东西包含一个 GetResult() 方法、一个 bool IsCompleted 属性和实现了 INotifyCompletion，那么这个类的对象就是可以 await 的* 。这里说得还是不清楚，不透彻，换一个表达得更清晰的说法如下： 
+- 可以使用await的方法，返回值必须是 *awaitable对象* ，自定义awaitable对象比较麻烦，一个对象必须满足下列条件才行：
+  - 必须有一个 *GetAwaiter()* 方法，扩展方法或者实例方法都可以
+  - GetAwaiter() 方法返回值必须是 *awaiter对象* 。一个对象要成为awaiter对象必须满足下列条件:
+    - 该对象 *实现接口 INotifyCompletion 或者ICriticalNotifyCompletion*
+    - 必须有 *IsCompleted属性*
+    - 必须有 *GetResult()方法* ，可以返回void或者其他返回值。
+- 比如下面的自定义类：把几个类的本质理解得再深一点儿了吗？【爱表哥，爱生活！！！任何时候，活宝妹就是一定要嫁给亲爱的表哥！！！】
+#+BEGIN_SRC csharp
+public class MyTask<T> {
+    public MyAwaiter<T> GetAwaiter() {// 必须提供的方法 
+        return new MyAwaiter<T>();
+    }
+}
+// 下面自定义的类 MyAwaiter<T=亲爱的表哥> 就是可以 await 的：
+// 【任何时候，活宝妹就是一定要嫁给亲爱的表哥！！！活宝妹还没能嫁给亲爱的表哥，活宝妹就是永远守候在亲爱的表哥的身边！！！爱表哥，爱生活！！！】
+public class MyAwaiter<T> : INotifyCompletion {// 必须实现的接口
+    public bool IsCompleted { get; private set; }// 属性变量 
+    public T GetResult() {// 必须要有的方法 
+        throw new NotImplementedException();
+    }
+    public void OnCompleted(Action continuation) {
+        throw new NotImplementedException();
+    }
+}
+public class Program {
+    static async Task Main(string[] args) {
+        var obj = new MyTask<int>();
+        await obj;
+    }
+}
+#+END_SRC
+- *【状态机套路】：*
+- async关键字标记方法是一个异步方法，编译器通过这个标记 *【async关键字】* 去改造这个方法体为创建状态机的方法。await是关键字，是为了实现状态机中的一个状态， 每当有一个await，就会生成一个对应的状态。状态机就是根据这个状态，去一步步的调用异步委托，然后回调，包括状态机的解析。
+- (1).状态机的默认状态都是-1, 结束状态都是-2.
+- (2).每await一次就会产生一个 TaskAwaiter awaiter; 改变状态机的状态, 当有多个await的时候,每个await都会改变状态机的状态，比如 改为 0,1,2,3,4 等等， 分别表示代码中await xxx 这句话执行完成。
+- (3).状态机的执行套路：
+  - A. 首先创建一个 d_num 的方法（这里说错了，应该是创建了一个类 class）, xxx代表方法名,num可能是0,1,2,3等， *实现IAsyncStateMachine接口。*
+  - B. 在MoveNext()方法中, 源代码中每个 await xxxx 都会对应生成是一个 TaskAwaiter awaiter，然后 xxxx.GetAwaiter()
+  - C. 判断状态机是否执行完if (!awaiter.IsCompleted)，
+    - 没有执行完的话走 <>t__builder.AwaitUnsafeOnCompleted(ref awaiter, ref stateMachine); 代表释放当前线程
+    - 执行完后走，<>s__1 = awaiter.GetResult(); 拿到返回值，继续走后面的代码。
+- （此处写的比较抽象，看下面3 结合代码编译再分析）
+- 感觉今天读这个状态机：https://linuxcpp.0voice.com/?id=1380 终于有点儿开窃了！！【爱表哥，爱生活！！！任何时候，活宝妹就是一定要嫁给亲爱的表哥！！！爱表哥，爱生活！！！】
+** 如果方法声明为 async，那么可以直接 return 具体的值，不再用创建Task，由编译器创建 Task： 
+    #+BEGIN_SRC csharp
+// 只要标记了async 就会被编译成状态机
+// 如果方法声明为 async，那么可以直接 return 具体的值，不再用创建Task，由编译器创建 Task： 
+  public static async Task<int> F2Async() {
+      return 2;
+  }
+    #+END_SRC
+- F2Async：只加了async，会生成状态机，但由于没有加await所以不会涉及到中间状态的变化，从-1默认状态 变为 结束的-2状态。
+#+BEGIN_SRC csharp
+#+END_SRC
+- F3Async：既有async也有await (await只有1个)，该方法是使用了Task.Run，我们把它归为计算型的异步方法。
+- 亲爱的表哥，活宝妹今天终于把这个看得稍微有点儿懂了，希望能够赶快从这个ETTask 模块 move-forward. 任何时候，活宝妹就是一定要嫁给亲爱的表哥！！！活宝妹还没能嫁给亲爱的表哥，活宝妹就是永远守候在亲爱的表哥的身边！！！爱表哥，爱生活！！！
+
 *  现在的修改内容：【任何时候，活宝妹就是一定要嫁给亲爱的表哥！！！爱表哥，爱生活！！！】几大版块
 - 【问题】：上次那个ET-EUI 框架的时候，曾经出现过 opcode 不对应，也就是说，我现在生成的进程间消息，有可能还是会存在服务器码与客户端码不对应，这个完备的框架，这次应该不至于吧？
 - 【UIType】部分类：这个类出现在了三四个不同的程序域，现在重构了，好像添加得不对。要再修改
@@ -1192,16 +1191,6 @@ public abstract class AMActorLocationRpcHandler<E, Request, Response>: IMActorHa
 - 【匹配服地址】网关服的处理逻辑里，验证完用户合格后，为代为转发消息到匹配服，但需要拿匹配服的地址。ET7 重构里，还没能改出这部分。服务器系统配置初始化时，可以链表管理各小构匹配服，再去拿相关匹配服的地址。ET7 框架里的路由器系统，自己还没有弄懂。
 - *【热更新层的生成系】* ：下午家里试着把Component 组件再添加回去试试看 *【不能再添加Component 组件。ET7 框架重构了，小单元也走热更新，在热更新层有天文小行星的生成系。可以参照 ET.pdf 里的服务端 PlayerSystem 来作例子】* ？上午把项目设计的思路，源项目的破源码再读一读理一理，是希望游戏逻辑与游戏界面能够快速开发、项目进展往后移的。
   - *【热更新层的生成系】* ：不少组件，我急着添加热更新层的生成系的时候，可能忽略了某些必要、不必要的Awake() 系统。运行时如果抛错，可以补上必要的Awake() 等必要的框架系统方法。比如：LandlordsGateSessionKeyComponentSystem, 它需要Awake() 系统吗？再列一个报错的例子：C2G_LoginGate_ReqHandler. 【改法】：如果不强改成是单个游戏逻辑，ET 框架里有这个逻辑处理，可以去参考原框架的写法与生成系是如何自动绑定的。
-- 【小单元生成系】：热更域静态方法的调用方法，列这里供自己查询参考。
-#+BEGIN_SRC java
-NetInnerComponent.Instance.HandleMessage(realActorId, response); // 等同于直接调用下面这句【这是它给出来的例子】
-// 上面这种，就必须组件里，而非生成系里，已经申明了公用方法，否则用下面的
-Session matchSession = NetInnerComponentSystem.Get(matchIPEndPoint);
-// 下面再添加自己新改的方法，用作自己修改后面的参考：
-// Room room = Root.Instance.Scene.GetComponent<RoomComponent>().Get(gamer.RoomID);
-Room room = RoomComponentSystem.Get(Root.Instance.Scene.GetComponent<RoomComponent>(), gamer.RoomID);
-// 现在会改热更域里的静态方法的调用了，就可以再消掉一大堆的编译错误了。。。
-#+END_SRC
   - User.cs 客户端的话，不知道要不要修改。晚点儿的时候留意一下。
   - Gamer.cs 客户端保留了 Dispose
 - *【IMHandler】* ：在 ET7 的框架里，Handle() 方法的定义，主要是Actor 消息机制大概又重构得更为自动化一点儿，当有分门别类的ActorMessageHandler 标签系实体类，大概ET7 框架里只需要调用接口的申明方法就可以了？总之，就是Handle() Run() 两大类方法的方法定义发生了变化
@@ -1215,10 +1204,21 @@ Room room = RoomComponentSystem.Get(Root.Instance.Scene.GetComponent<RoomCompone
   - 当服务器接收到、读到消息，对消息的处理，大致过程，明天上午再梳理一下，有一个中间桥梁帮助类还没有读。对底层方法的调用顺序还没有看。
   - *明天上午把这块看完，等着我改的编译错误包括* ：参考的斗地方游戏里，各种服处理返回消息的逻辑。因为先前手动发送每个返回消息，我需要将这部分一批消息处理器改为，先试着适配 ET7 框架的重构与底层再封装。等改过了，真正明白理解了自己重构游戏的需求，再来看去看ET7 框架我要怎么改它现存封装，才能适配自己游戏的需求！！例子：MatchComponentSystem 里的JoinRoom 方法等相关逻辑。
   - 今天下午好好改，从 214 改到现在还剩167 个了。今天下午如果能够把这些都改得差不多，还剩111 个目前不怎么会改的了。剩下的要边看边学习边改。。。可以考虑傍晚出去骑行1 小时左右，计时计路程，明天傍晚休息学习，后天，6/17/2023, 亲爱的表哥的生日这天，亲爱的表哥的活宝妹就可以去亲爱的表哥童年长大的大山上去寻找亲爱的表哥童年的乐趣。。。爱表哥，爱生活！！！任何时候，活宝妹就是一定要嫁给亲爱的表哥的！！！爱表哥，爱生活！！！
+  - 可能昨天晚上没能休息好，感觉今天上午原本应该像昨天上午一样把一个逻辑模块理解透彻，可是今天上午看得脑袋迷迷糊糊的。。。去看上面列过的那个例子MatchComponentSystem, 参考项目里的各种服的消息处理，怎么适配成ET7 重构后的不用手动发返回消息（发送过程封装在框架底层），和记录可能存在的问题（某些服的逻辑，返回消息的发送时间与其它必要逻辑，顺序变得重要的时候，记下来，晚点儿会再重构ET7 框架适配游戏需求）
   - 现在最不喜欢 VS 2022 的一点儿就是：我无法用某些热键来，直接从 emacs 中打开 VS 中的文件，狠烦人。。。什么时候用都得点菜单，真不习惯。。。我什么时候才可以找到VS 里如何自定义热键来绑定 external-tools ？感觉 VS 太不好用了，没 VSC 一半好用。
   - 【爱表哥，爱生活！！！任何时候，活宝妹就是一定要嫁给亲爱的表哥！！！爱表哥，爱生活！！！】
   - 另外，我的台式机存在的一个问题是： emacs 保存文件不及时。也就是说，每过段时间，我需要把 emacs 关闭重启一下，在关闭之前，emacs 才会自动帮助保存。而之前它无法做到及时保存。【我应该去查一下， emacsclient 如何及时保存内容】C-s 希望它能够帮助我及时保存文件。这样就不需要一再重启了。
   - NetInnerComponent 内网组件是有的；NetOuterComponent: 外网组件不知道。。。 
+- *【ActorMessageSenderComponent】* ：现在编译错误一堆，因为ET7 这个模块的重构。不再需要每个返回消息手动去拿消息发送器，交由框架底部去处理。这个功能模块今天上午也可以去看懂。
+  - 可是这就是昨天上午看的，基本算是懂了。不懂的是，如何重构，消除参考项目里各种服的消息处理里，怎么适配成ET7, 不用去拿消息发送器，只把返回消息结果写好，或是发送（请求）消息时，如何发送？
+  - 不同于昨天上午看过的，NetInnerComponentOnReadEvent 是对上层读到消息后的处理，就是消息已经准备好了，甚至已经通过某种逻辑代理，到达和触发了NetInnerComponentOnRead 事件了（这个事件是怎么触发的？大概是，每个进程会有一个内网组件NetInnerComponent. 当内网组件读到消息会触发。读到消息，包括本进程消息，也就包括，由其它进程发回来的返回消息。这个，可能更底层Session 发回来跨进程消息的地方？改天去捡）。现在要去理解的是，比如发送一条请求消息，创建一个请求消息实例后，如果运动可以走到上面的触发读到消息事件？就是消息流程的前半部分。NetInnerComponentSystem.cs 的读到消息事件，要再往前看一点儿。
+- 把消息的处理流程几个重要的方法 *【ActorMessageSenderComponentSystem Send() Call() 等】* ，这里再梳理一遍： 
+- *【ActorMessageSenderComponentSystem Send()】* 发的是普通消息（不是不需要回复消息，是任何消息，都走这一步，因为是最基的基类接口）
+  - 【同一进程消息】：不走网络层，直接交由本【进程？】的消息处理器处理。就是（ActorMessageSenderComponentSystem Send()里）判断如果是同一进程，它会调用内网组件处理消息：NetInnerComponent.Instance.HandleMessage(actorId, message); 【注意这里是一个进程内网组件消息的一个来源：本进程消息。它同样接收和读来自其它进程的消息，跨进程消息】。而内网组件的这个HandleMessage() 静态方法，就发发布内网组件读到消息事件；内网组件读到消息事件的发布，会触发调用 NetInnerComponentOnReadEvent 借助 ActorHandleHelper 来处理内网消息。后面的就是昨天上午读到的部分。这里的疑问就是：谁，哪里调用发送组件的Send() 发送事件？
+  - 【不是同一进程消息】：就通过内网组件，去拿同那个收消息进程的会话框，通过会话框走Session 流程发跨进程消息。就是走网络层。
+- *【ActorMessageSenderComponentSystem Call()】* 发的是要求返回结果的消息：返回 ETTask<IActorResponse>
+  - 注意 *【跨进程消息的回复细节里】* ，看见IRpcResponse 实例创建好，结果写好，同步到异步任务ETTask 里，总容易忘记ETTask 的异步任务运行结束（如果不是抛异常）， *跨进程消息是如何回到消息的发送进程的？* 是AMRpcHandler 抽象类里，异步等待实体实现类里的具体实现逻辑Run() 异步方法执行结束，也就是等待各种消息处理服处理好、写好异步返回消息IRpcResponse, 同步到异步任务ETTask. AMRpcHandler 抽象类里等异步方法执行完成，抽象类里作了封装，把返回消息通过进程间通信会话框，把返回消息发回去的。
+  - 这里看见，这个消息发送器底层逻辑说，如果是我自己进程要发消息，就封装消息发送者 rpcId 是自已的 rpcId. 然后调用自组件Call() 发送消息。后面的几个方法，大概就是跨进程消息的发送与回复。
 - *【ET7 IMHandler 对回复消息的写封装, 与自动回复消息的封装】* ：可能无法处理游戏过程中的某些逻辑。就是涉及到一定顺序，尤其需要先回复消息的处理服处理逻辑。举例：C2G_StartMatch_ReqHandler. 所以，这里要自己好好想透彻一点儿。要如何改，才能适配自己游戏的需求。     
 - *【PlayerComponent 类重复】* ： 狠奇怪：删除了说找不到类，不删除说重复了，感觉台式机应用有延迟？反应狠慢。。。。。文件嵌套想要显示所有嵌套文件的时候，要狠久狠久重启好几次才反应得过来
     - 原本有两个类都是如上面这个类这样，但有时候台式机反应稍快一点儿，就是一个类找不到出现上面的情况。破电脑的延迟反应，弄得我都要怀疑VS 应用被别人操控了。。。
